# MarketSim

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
controller/: Cargo.toml
controller/src/: lib.rs  trading.rs
core/: Cargo.toml
core/src/: lib.rs  market.rs  ware.rs  world.rs
core/src/entity/: mod.rs  recipe.rs
core/src/market/: mod.rs  offer.rs
core/src/model/: mod.rs  world.rs
core/src/model/entity/: mod.rs  recipe.rs
core/src/model/market/: mod.rs  offer.rs
model/: Cargo.toml
model/src/: display.rs  from_str.rs  lib.rs  prices.rs  templates.rs  ware.rs  world.rs
model/src/entity/: mod.rs  recipe.rs
model/src/market/: mod.rs  offer.rs  ware_range_iter.rs
src/: frontend.rs  main.rs  simulation.rs
src/simulation/: simulation_state.rs
src/simulation/simulation_state/: entities.rs
templates/: index.html.tera
