[package]
name = "marketsim"
version = "0.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rand = "0.7"
derive-new = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
getset = "0.0.7"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates", "serve", "json"]